Ignore 'usemap' attribute if it contains no #

According to the HTML standard, usemap="no-hash-name" should not work
with <map name="no-hash-name"> [1].
[1] https://html.spec.whatwg.org/multipage/common-microsyntaxes.html#rules-for-parsing-a-hash-name-reference

Bug: 897025
Change-Id: Ib8ef533795e986e782a702c2562a155f59d7ce13
Reviewed-on: https://chromium-review.googlesource.com/c/1291190
Reviewed-by: Kent Tamura <tkent@chromium.org>
Commit-Queue: Amos Lim <eui-sang.lim@samsung.com>
Cr-Commit-Position: refs/heads/master@{#601473}
Former-commit-id: 9ef9d7d626a0a44c4104e3dcb60251feaa1a5df6